# witchesGame

./: codecov.yml  pyproject.toml  readme.md
.github/workflows/: ci.yaml
src/: card.py  gameBoard.py  generator.py
tests/unit/: test_card.py  test_gameBoard.py  test_generator.py
