[tool.poetry]
name = "witchesgame"
version = "0.1.0"
description = "Solves automatically the brain teaser - \"Jeu fou de la sorcière\""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
